--- a/lang/en_us.json
+++ b/lang/en_us.json
@@ -5,7 +5,7 @@
 	"button.login": "Sign In",
 	"button.continue": "Continue",
 	"account-select.title": "I'm a...",
-	"account-select.personal": "normal person",
+	"account-select.personal": "Normal Person",
 	"account-type.teacher": "Teacher",
 	"account-type.student": "Student",
 	"account-type.personal": "Personal"
