so many translations

--- a/lang/en_us.json
+++ b/lang/en_us.json
@@ -3,7 +3,9 @@
 	"nav.subjects": "Subjects",
 	"nav.about": "About us",
 	"button.login": "Sign In",
+	"button.register": "Sign Up",
 	"button.continue": "Continue",
+	"button.back": "Back",
 	"account-select.title": "I'm a...",
 	"account-select.personal": "Normal Person",
 	"account-type.teacher": "Teacher",
