--- a/lang/en_us.json
+++ b/lang/en_us.json
@@ -21,5 +21,7 @@
 	"placeholder.email": "Email",
 	"placeholder.password": "Password",
 	"error.notfound.class": "There is no class with the specified code",
-	"error.notfound.user": "Email or password is incorrect"
+	"error.notfound.user": "Email or password are incorrect",
+	"error.exists.email": "Email is already in use",
+	"error.exists.username": "Username is already in use"
 }
