--- a/lang/en_us.json
+++ b/lang/en_us.json
@@ -23,5 +23,7 @@
 	"error.notfound.class": "There is no class with the specified code",
 	"error.notfound.user": "Email or password are incorrect, or you might be using the wrong account type",
 	"error.exists.email": "Email is already in use",
-	"error.exists.username": "Username is already in use"
+	"error.exists.username": "Username is already in use",
+	"hero.title": "The best way to learn",
+	"hero.description": "Understand languages and learn why. Use exercises from teachers, or create your own"
 }
