--- a/lang/en_us.json
+++ b/lang/en_us.json
@@ -22,6 +22,7 @@
 	"text.register-teacher": "Register Teacher account",
 	"text.login-personal": "Login",
 	"text.register-personal": "Register",
+	"text.profile.welcome": "Welcome,",
 	"placeholder.classcode": "Class Code",
 	"placeholder.username": "Username",
 	"placeholder.email": "Email",
