add missing lang keys

--- a/lang/en_us.json
+++ b/lang/en_us.json
@@ -11,6 +11,10 @@
 	"button.login": "Sign In",
 	"button.register": "Sign Up",
 	"button.continue": "Continue",
+	"button.home": "Home",
+	"button.learn": "My Learn",
+	"button.subjects": "Subjects",
+	"button.leaderboard": "Leaderboard",
 	"button.back": "Back",
 	"account-select.title": "I'm a...",
 	"account-select.personal": "Normal Person",
