--- a/lang/en_us.json
+++ b/lang/en_us.json
@@ -1,4 +1,6 @@
 {
+	"unset": "Lorem ipsum dolor sit amet, consectetur adipiscing elit",
+
 	"title.home": "Home",
 	"title.login": "Login",
 	"title.login.personal": "Login",
